--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,8 +74,9 @@ spring.servlet.multipart.file-size-threshold=0
 spring.servlet.multipart.resolve-lazily=false
 
 
-#kafka
-kafka.consumer.servers=127.0.0.1:9092
+
+#kafkaœ‡πÿ≈‰÷√
+spring.kafka.bootstrap-servers=192.168.56.105:9092
 kafka.consumer.enable.auto.commit=true
 kafka.consumer.session.timeout=6000
 kafka.consumer.auto.commit.interval=100
@@ -83,7 +84,6 @@ kafka.consumer.auto.offset.reset=latest
 spring.kafka.consumer.group-id=test-consumer-group
 kafka.consumer.concurrency=10
 
-kafka.producer.servers=127.0.0.1:9092
 kafka.producer.retries=1
 kafka.producer.batch.size=4096
 kafka.producer.linger=1
