--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
 			<artifactId>guava</artifactId>
 			<version>21.0</version>
 		</dependency>
+        <!--quartz定时任务-->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
