--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=9090
 #### 数据库连接池属性
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/taotao?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin://localhost:1521/XE?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123
 #自动提交
@@ -74,9 +76,11 @@ spring.servlet.multipart.file-size-threshold=0
 spring.servlet.multipart.resolve-lazily=false
 
 
-
 #kafka相关配置
-spring.kafka.bootstrap-servers=192.168.56.105:9092
+#虚拟机
+#spring.kafka.bootstrap-servers=192.168.56.105:9092
+#windows
+spring.kafka.bootstrap-servers=127.0.0.1:9092
 kafka.consumer.enable.auto.commit=true
 kafka.consumer.session.timeout=6000
 kafka.consumer.auto.commit.interval=100
@@ -88,3 +92,4 @@ kafka.producer.retries=1
 kafka.producer.batch.size=4096
 kafka.producer.linger=1
 kafka.producer.buffer.memory=40960
+
