--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
@@ -70,6 +70,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--添加发布依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- 分页插件文档地址：https://github.com/pagehelper/Mybatis-PageHelper/blob/master/wikis/zh/HowToUse.md -->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
@@ -111,6 +118,7 @@
 			<artifactId>guava</artifactId>
 			<version>21.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -121,6 +129,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
