--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,3 +93,6 @@ kafka.producer.batch.size=4096
 kafka.producer.linger=1
 kafka.producer.buffer.memory=40960
 
+#mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017/mydb1
+
