--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.redis.database=0
 # 连接池最大连接数（使用负值表示没有限制） 默认 8
 spring.redis.lettuce.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
-spring.redis.lettuce.pool.max-wait=-1
+#spring.redis.lettuce.pool.max-wait=-1
 # 连接池中的最大空闲连接 默认 8
 spring.redis.lettuce.pool.max-idle=8
 # 连接池中的最小空闲连接 默认 0
