--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 #spring.redis.password=root #根据需要
 # 连接超时时间（毫秒）
-spring.redis.timeout=10000s
+spring.redis.timeout=10000ms
 # Redis默认情况下有16个分片，这里配置具体使用的分片，默认是0
 spring.redis.database=0
 # 连接池最大连接数（使用负值表示没有限制） 默认 8
@@ -72,8 +72,8 @@ spring.servlet.multipart.resolve-lazily=false
 #kafka相关配置
 #虚拟机
 #kafka消费者
-spring.kafka.bootstrap-servers=192.168.56.102:9092
-spring.kafka.consumer.group-id=0
+spring.kafka.bootstrap-servers=192.168.56.102:9092,192.168.56.102:9093,192.168.56.102:9094
+spring.kafka.consumer.group-id=group1
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.auto-commit-interval=5s
@@ -84,6 +84,8 @@ spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+topic=test1
 
 
 
